--- a/DaKo Group Work - Titanic.ipynb
+++ b/DaKo Group Work - Titanic.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,12 +31,7 @@
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
-    "import numpy as np \n",
-    "from sklearn.pipeline import Pipeline\n",
-    "from sklearn.impute import SimpleImputer\n",
-    "from sklearn.preprocessing import StandardScaler\n",
-    "from sklearn.preprocessing import OneHotEncoder\n",
-    "from sklearn.compose import ColumnTransformer"
+    "import numpy as np "
    ]
   },
   {
